--- a/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/software.ejs
+++ b/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/software.ejs
@@ -13,7 +13,7 @@
     <div class="col-md-10">
       <div class="card">
         <div class="card-body">
-          <form action="/software/:id" method="post">
+          <form action="/software/<%= software._id %>" method="post">
             <div class="form-group">
               <input class="form-control" name="description" cols="80"
                 placeholder="Escribe la descripción del software">
@@ -44,11 +44,9 @@
     <tbody>
       <% for(var i=0; i < software.length; i++) { %>
         <tr>
-        <%if(asignaturas._id.toString()==software.asignaturas.toString()){%>              
             <td><%= i + 1%></td>
             <td><%= software[i].desciption%></td>
             <td><%=software[i].url%></td>
-        <% } %>
       </tr>
     <% } %>  
     </tbody>
