Label asignaturas, sigue sin ir sofware

--- a/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/usuarios.ejs
+++ b/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/usuarios.ejs
@@ -39,6 +39,7 @@
             </div>
             <br>
             <div class="form-group">
+              <label>Asignaturas:  </label>
               <%for (var i=0; i < asignaturas.length;i++){%>
               <input type="checkbox" name="asignaturas" value="<%=asignaturas[i]._id%>">
               <label for="asignaturas"><%=asignaturas[i].title%></label>
