--- a/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/editar_usuarios.ejs
+++ b/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/editar_usuarios.ejs
@@ -32,13 +32,15 @@
 
                         <div>
                             <label>Rol: </label>
-                            <select name="rol">
+                            <select name="rol" >
+                               
                                 <option>Administrador</option>
                                 <option>Profesor</option>
                                 <option>Alumno</option>
                             </select>
                         </div>
                         <div class="form-group">
+                            <label>Asignaturas:  </label>
                             <%for (var i=0; i < asignaturas.length;i++){%>
                                 <%var encontrada=false;%>
                                 <%for( var j=0;j < usuario.asignaturas.length;j++){%>
