Cambio de colores

--- a/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/info_usuarios.ejs
+++ b/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/info_usuarios.ejs
@@ -31,7 +31,7 @@
                 
 
                 <div class="mt-5 text-center">
-                    <a class="btn btn-primary profile-button" href="/usuarios/editar_usuarios/<%= user._id %>" type="button"> Editar Informacion</a>
+                    <a class="btn btn-secondary profile-button" href="/usuarios/editar_usuarios/<%= user._id %>" type="button"> Editar Informacion</a>
                 </div>
             </div>
         
