--- a/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/asignaturas.ejs
+++ b/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/asignaturas.ejs
@@ -25,7 +25,7 @@
                 placeholder="Escribe la información de instalación"
                 ></textarea>
             </div>
-            <button class="btn btn-primary" type="submit">Añadir</button>
+            <button class="btn btn-secondary" type="submit">Añadir</button>
           </form>
         </div>
       </div>
