--- a/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/editar_asignaturas.ejs
+++ b/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/editar_asignaturas.ejs
@@ -24,7 +24,7 @@
                 placeholder="Escribe la información de instalación"
                 ><%= asignaturas.info_instalacion %></textarea>
             </div>
-            <button class="btn btn-primary" type="submit">Editar</button>
+            <button class="btn btn-secundary" type="submit">Editar</button>
           </form>
         </div>
       </div>
