--- a/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/editar_usuarios.ejs
+++ b/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/editar_usuarios.ejs
@@ -60,7 +60,7 @@
                             <%}%>
                             <% } %>
                         </div>
-                        <button class="btn btn-primary" type="submit">Añadir</button>
+                        <button class="btn btn-secundary" type="submit">Editar</button>
                     </form>
                 </div>
             </div>
