--- a/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/index.ejs
+++ b/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/index.ejs
@@ -12,8 +12,8 @@
   .login {
     width: 320px;
     height: 420px;
-    background: rgb(56, 56, 56);
-    color: rgb(88, 184, 25);
+    background: rgb(56, 56, 56);;
+    color: rgb(255, 255, 255);
     top: 50%;
     left: 50%;
     position: absolute;
