--- a/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/partials/_header.ejs
+++ b/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/partials/_header.ejs
@@ -55,18 +55,18 @@
   }
   
   nav {
-    background: #2B2B2B;
+    background: #6c0a75;
     text-align: center;
     letter-spacing: 1px;
-    text-shadow: 1px 1px 1px #0E0E0E;
-    box-shadow: 2px 2px 3px #888;
+    text-shadow: 1px 1px 1px #312431;
+    box-shadow: 2px 2px 3px rgb(136, 136, 136);
   }
   
 
   ul.primer_tab li a {
     display: block;
     padding: 20px 30px;
-    border-right: 1px solid rgb(145, 21, 21);
+    border-right: 1px solid rgb(135, 21, 145);
     text-decoration: none;
     color: #fff;
 
