--- a/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/usuarios.ejs
+++ b/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/usuarios.ejs
@@ -45,7 +45,7 @@
               <label for="asignaturas"><%=asignaturas[i].title%></label>
               <% } %>
             </div>
-            <button class="btn btn-primary" type="submit">Añadir</button>
+            <button class="btn btn-secondary" type="submit">Añadir</button>
           </form>
         </div>
       </div>
@@ -53,7 +53,7 @@
       <br>
     </div>
 
-    <div class="col-md-15">
+    <div class="col-md-10">
       <table class="table table-bordered table-hover">
         <thead>
           <tr>
