Tipo de asignatura

--- a/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/editar_asignaturas.ejs
+++ b/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/editar_asignaturas.ejs
@@ -24,6 +24,15 @@
                 placeholder="Escribe la información de instalación"
                 ><%= asignaturas.info_instalacion %></textarea>
             </div>
+            <div>
+              <label>Tipo de Asignatura:</label>
+              <select name="tipo_asignatura">
+                <option>Grado</option>
+                <option>Master</option>
+                <option>Doctorado</option>
+              </select>
+            </div>
+            <br>
             <button class="btn btn-secundary" type="submit">Editar</button>
           </form>
         </div>
