Usuario ya no puede modificar su rol ni sus asignaturas

--- a/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/editar_usuarios.ejs
+++ b/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/editar_usuarios.ejs
@@ -1,69 +1,74 @@
 <% include partials/_header %>
+
 <head>
-  <meta charset="utf-8">
-  <title>Editar usuarios</title>
-  <!-- BOOTSTRAP CDN -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+    <meta charset="utf-8">
+    <title>Editar usuarios</title>
+    <!-- BOOTSTRAP CDN -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
+        integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 </head>
 <div class="container">
-    <div class="row">
-        <div class="col-md-15">
-            <div class="card">
-                <div class="card-body">
-                    <form action="/usuarios/editar_usuarios/<%= usuario._id %>" method="post">
-                        <div class="form-group">
-                            <input class="form-control" type="text" name="nombre" placeholder="Nombre" value="<%= usuario.nombre %>">
-                        </div>
-                        <div class="form-group">
-                            <input class="form-control" type="text" name="apellidos" placeholder="Apellidos" value="<%= usuario.apellidos %>">
-                        </div>
-                        <div class="form-group">
-                            <input class="form-control" type="text" name="correo" placeholder="Correo" value="<%= usuario.correo %>">
-                        </div>
-                        <div class="form-group">
-                            <input class="form-control" type="text" name="imagen_perfil" placeholder="Introduce una url con foto" value="<%= usuario.imagen_perfil %>">
-                        </div>
-
-                        <%if(usuario.correo.toString()==user.correo.toString()){%>
-                        <div class="form-group">
-                            <input class="form-control" type="text" name="password" placeholder="Introduce una nueva contraseña">
-                        </div>
-                        <% } %>
-
-                        <div>
-                            <label>Rol: </label>
-                            <select name="rol" >
-                               
-                                <option>Administrador</option>
-                                <option>Profesor</option>
-                                <option>Alumno</option>
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <label>Asignaturas:  </label>
-                            <%for (var i=0; i < asignaturas.length;i++){%>
-                                <%var encontrada=false;%>
-                                <%for( var j=0;j < usuario.asignaturas.length;j++){%>
-                                <%if(asignaturas[i]._id.toString()==usuario.asignaturas[j].toString()){%>
-                                    <% encontrada=true;%>
-
-                                <%}%>
-
-                            <% } %>
-
-                            <%if(encontrada==true){%>
-                                <input type="checkbox" name="asignaturas" value="<%=asignaturas[i]._id%>" checked><label
-                                for="asignaturas"><%=asignaturas[i].title%></label>
-                            <%}else{%>
-                                <input type="checkbox" name="asignaturas" value="<%=asignaturas[i]._id%>"><label
-                                for="asignaturas"><%=asignaturas[i].title%></label>
-                            <%}%>
-                            <% } %>
-                        </div>
-                        <button class="btn btn-secundary" type="submit">Editar</button>
-                    </form>
+    <div class="card">
+        <div class="card-body">
+            <form action="/usuarios/editar_usuarios/<%= usuario._id %>" method="post">
+                <div class="form-group">
+                    <input class="form-control" type="text" name="nombre" placeholder="Nombre"
+                        value="<%= usuario.nombre %>">
                 </div>
-            </div>
+                <div class="form-group">
+                    <input class="form-control" type="text" name="apellidos" placeholder="Apellidos"
+                        value="<%= usuario.apellidos %>">
+                </div>
+                <div class="form-group">
+                    <input class="form-control" type="text" name="correo" placeholder="Correo"
+                        value="<%= usuario.correo %>">
+                </div>
+                <div class="form-group">
+                    <input class="form-control" type="text" name="imagen_perfil"
+                        placeholder="Introduce una url con foto" value="<%= usuario.imagen_perfil %>">
+                </div>
+
+                <%if(usuario.correo.toString()==user.correo.toString()){%>
+                <div class="form-group">
+                    <input class="form-control" type="text" name="password"
+                        placeholder="Introduce una nueva contraseña">
+                </div>
+                <% } %>
+                <%if(user.rol == "Administrador" ){%>
+                <div>
+                    <label>Rol: </label>
+                    <select name="rol">
+
+                        <option>Administrador</option>
+                        <option>Profesor</option>
+                        <option>Alumno</option>
+                    </select>
+                </div>
+
+                <div class="form-group">
+                    <label>Asignaturas: </label>
+                    <%for (var i=0; i < asignaturas.length;i++){%>
+                    <%var encontrada=false;%>
+                    <%for( var j=0;j < usuario.asignaturas.length;j++){%>
+                    <%if(asignaturas[i]._id.toString()==usuario.asignaturas[j].toString()){%>
+                    <% encontrada=true;%>
+
+                    <%}%>
+
+                            <% } %>
+
+                    <%if(encontrada==true){%>
+                    <input type="checkbox" name="asignaturas" value="<%=asignaturas[i]._id%>" checked><label
+                        for="asignaturas"><%=asignaturas[i].title%></label>
+                    <%}else{%>
+                    <input type="checkbox" name="asignaturas" value="<%=asignaturas[i]._id%>"><label
+                        for="asignaturas"><%=asignaturas[i].title%></label>
+                    <%}%>
+                            <% } %>
+                </div>
+                <% } %>
+                <button class="btn btn-secundary" type="submit">Editar</button>
+            </form>
         </div>
     </div>
 </div>
