--- a/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/info_usuarios.ejs
+++ b/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/info_usuarios.ejs
@@ -25,8 +25,12 @@
                 </div>
                 <div class="row mt-3">
                     <div class="col-md-12"><label class="labels">ROL</label><input type="text"  readonly="readonly" class="form-control" value="<%= user.rol %>"></div><p> </p>
+                    
+                    <%if(user.rol == "Alumno" ){%>
+                        <div class="col-md-12"><label class="labels">Tipo de curso</label><input type="text"  readonly="readonly" class="form-control" value="<%= user.tipo_curso %>"></div><p> </p>
+                    <% } %>
+                    
                     <div class="col-md-12"><label class="labels">Email</label><input type="text" readonly="readonly" class="form-control" value="<%= user.correo %>"></div><p></p>
-
                 </div>
                 
 
