--- a/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/usuarios.ejs
+++ b/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/usuarios.ejs
@@ -36,6 +36,15 @@
                 <option>Profesor</option>
                 <option>Alumno</option>
               </select>
+
+    
+              <label style="margin-left: 50px;">Tipo de curso:</label>
+              <select name="tipo_curso">
+                <option>Grado</option>
+                <option>Master</option>
+                <option>Doctorado</option>
+              </select>
+        
             </div>
             <br>
             <div class="form-group">
@@ -53,7 +62,7 @@
       <br>
     </div>
 
-    <div class="col-md-10">
+    <div class="col-md-20">
       <table class="table table-bordered table-hover">
         <thead>
           <tr>
@@ -62,6 +71,7 @@
             <th>Apellidos</th>
             <th>Correo</th>
             <th>Rol</th>
+            <th>Tipo de curso</th>
             <th>Asignaturas</th>
             <th>Operaciones</th>
 
@@ -75,6 +85,7 @@
             <td><%= usuarios[i].apellidos%></td>
             <td><%= usuarios[i].correo%></td>
             <td><%= usuarios[i].rol%></td>
+            <td><%= usuarios[i].tipo_curso%></td>
             <td>
               <%for (var j=0; j < usuarios[i].asignaturas.length;j++){%>
               <%for (var k=0;k < asignaturas.length;k++){%>
