--- a/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/usuarios.ejs
+++ b/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/usuarios.ejs
@@ -15,16 +15,16 @@
         <div class="card-body">
           <form action="/addUserCSV" method="post" enctype="multipart/form-data">
             <div class="form-group">
-              <input class="form-control" type="text" name="nombre" placeholder="Nombre">
+              <input class="form-control" type="text" name="nombre" placeholder="Nombre" required>
             </div>
             <div class="form-group">
-              <input class="form-control" type="text" name="apellidos" placeholder="Apellidos">
+              <input class="form-control" type="text" name="apellidos" placeholder="Apellidos" required>
             </div>
             <div class="form-group">
-              <input class="form-control" type="text" name="correo" placeholder="Correo">
+              <input class="form-control" type="text" name="correo" placeholder="Correo" required>
             </div>
             <div class="form-group">
-              <input class="form-control" type="text" name="password" placeholder="Contraseña">
+              <input class="form-control" type="text" name="password" placeholder="Contraseña" required>
             </div>
             <div class="form-group">
               <input class="form-control" type="text" name="imagen" placeholder="Introduce una url con foto">
@@ -87,6 +87,7 @@
               <td><%= usuarios[i].apellidos%></td>
               <td><%= usuarios[i].correo%></td>
               <td><%= usuarios[i].rol%></td>
+              <td><%= usuarios[i].tipo_curso%></td>
               <td>
                 <%for (var j=0; j < usuarios[i].asignaturas.length;j++){%>
                 <%for (var k=0;k < asignaturas.length;k++){%>
@@ -98,6 +99,7 @@
                 <% } %>
               </td>
               <td>
+               
                 <a href="/usuarios/editar_usuarios/<%= usuarios[i]._id %>" class="btn btn-secondary">Edit</a>
                 <a id="eliminar" onclick="pop_up()" href="/usuarios/delete/<%= usuarios[i]._id %>" class="btn btn-danger">Delete</a>
               </td>
