--- a/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/usuarios.ejs
+++ b/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/usuarios.ejs
@@ -64,6 +64,17 @@
       <br>
     </div>
 
+    <div class="form-group">
+      <form method="post" enctype="multipart/form-data" action="/addUserCSV">
+          
+        <p>
+          <input type="file" name="file" accept="text/CSV" /> 
+          <button type="submit">Añadir mediante CSV</button>    
+        </p>  
+        
+      </form>
+    </div>
+
     <div class="col-md-20">
       <table class="table table-bordered table-hover">
         <thead>
