Sugerencias manda emails vacios :)

--- a/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/partials/_header.ejs
+++ b/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/partials/_header.ejs
@@ -12,6 +12,9 @@
                 <%}%>
                 <%if(user){%>
                 <li><a href="/asignaturas">Asignaturas</a></li>
+                <%if(user.rol == "Alumno"){%>
+                <li><a href="/correo_alertas">Sugerencias</a></li>
+                <%}%>
                   <%if(user.rol == "Administrador"){%>
                   <li><a href="/usuarios">Usuarios</a></li>
                   <%}%>
