Sugerencias ya manda bien los emails

--- a/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/correo_alertas.ejs
+++ b/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/correo_alertas.ejs
@@ -10,7 +10,7 @@
 <div class="container">
   <div class="card">
     <div class="card-body">
-      <form action="/correo_alertas/enviar" method="get">
+      <form action="/correo_alertas/enviar" method="post">
         <div class="form-group">
           <label>Titulo:</label>
           <input class="form-control" type="text" name="title" placeholder="Introduce un titulo" required>
