--- a/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/editar_usuarios.ejs
+++ b/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/editar_usuarios.ejs
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
         integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 </head>
-<div class="container">
+<div class="container" >
     <div class="card">
         <div class="card-body">
             <form action="/usuarios/editar_usuarios/<%= usuario._id %>" method="post">
@@ -35,22 +35,30 @@
                 </div>
                 <% } %>
                 <%if(user.rol == "Administrador" ){%>
+                
                 <div>
                     <label>Rol: </label>
-                    <select name="rol">
-
+                    <select name="rol" id="tipo" onchange="alClickar()">
                         <option>Administrador</option>
                         <option>Profesor</option>
                         <option>Alumno</option>
                     </select>
-                <%if(usuario.rol == "Alumno" ){%>
+
+                    <script>
+                        function alClickar() {
+                            var rol_usuario = usuario.rol;
+                            alert(rol_usuario);
+                        }
+                    </script>
+
+                    <%if(usuario.rol == "Alumno" ){%>
                     <label style="margin-left: 50px;">Tipo de curso:</label>
                     <select name="tipo_curso">
-                      <option>Grado</option>
-                      <option>Master</option>
-                      <option>Doctorado</option>
+                        <option>Grado</option>
+                        <option>Master</option>
+                        <option>Doctorado</option>
                     </select>
-                <% } %>
+                    <% } %>
                 </div>
 
                 <div class="form-group">
