--- a/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/usuarios.ejs
+++ b/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/usuarios.ejs
@@ -8,7 +8,7 @@
     integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 </head>
 <%if(user.rol == "Administrador"){%>
-<div class="container">
+<div class="container" >
   <div class="row">
     <div class="col-md-10">
       <div class="card">
@@ -29,31 +29,45 @@
             <div class="form-group">
               <input class="form-control" type="text" name="imagen" placeholder="Introduce una url con foto">
             </div>
-            <div id="tipo" name="tipo">
+            <div>
               <label>Rol:</label>
-              <select name="rol">
+              <select name="rol" onchange="alCambiar()" id="tipo">
                 <option>Administrador</option>
                 <option>Profesor</option>
                 <option>Alumno</option>
               </select>
             </div>
 
-              <div id="tipoEstudio">
-             
-              <label style="margin-left: 50px;">Tipo de curso:</label>
-              <select name="tipo_curso">
-                <option>Grado</option>
-                <option>Master</option>
-                <option>Doctorado</option>
+
+
+            <div id="tipoEstudio" style="display: none;">
+              <label>Tipo de curso:</label>
+              <select name="tipo_curso" id="selectEstudio">
+                <option value="Grado">Grado</option>
+                <option value="Master">Master</option>
+                <option value="Doctorado">Doctorado</option>
               </select>
-              
             </div>
+
+              <script>
+                function alCambiar() {
+                 var rol_seleccionado =  $('#tipo').val();
+                 if (rol_seleccionado == "Alumno") {
+                    $("#tipoEstudio").show();
+                 }else {
+                    $("#tipoEstudio").hide();
+                 }
+                }
+              </script>
+
+            
             <br>
             <div class="form-group">
-              <label>Asignaturas:  </label>
-              <%for (var i=0; i < asignaturas.length;i++){%>
-              <input type="checkbox" name="asignaturas" value="<%=asignaturas[i]._id%>">
-              <label for="asignaturas"><%=asignaturas[i].title%></label>
+              <label>Asignaturas: </label>
+
+              <%for (var i=0; i < asignaturas.length;i++){%>                  
+                <input type="checkbox" name="asignaturas" value="<%=asignaturas[i]._id%>">
+                <label for="asignaturas"><%=asignaturas[i].title%></label>
               <% } %>
             </div>
             <button class="btn btn-secondary" type="submit">Añadir</button>
@@ -66,12 +80,12 @@
 
     <div class="form-group">
       <form method="post" enctype="multipart/form-data" action="/addUserCSV">
-          
+
         <p>
-          <input type="file" name="file" accept="text/CSV" /> 
-          <button type="submit">Añadir mediante CSV</button>    
-        </p>  
-        
+          <input type="file" name="file" accept="text/CSV" />
+          <button type="submit">Añadir mediante CSV</button>
+        </p>
+
       </form>
     </div>
 
@@ -92,30 +106,31 @@
         </thead>
         <tbody>
           <% for(var i=0; i < usuarios.length; i++) { %>
-            <tr>
-              <td><%= i + 1%></td>
-              <td><%= usuarios[i].nombre%></td>
-              <td><%= usuarios[i].apellidos%></td>
-              <td><%= usuarios[i].correo%></td>
-              <td><%= usuarios[i].rol%></td>
-              <td><%= usuarios[i].tipo_curso%></td>
-              <td>
-                <%for (var j=0; j < usuarios[i].asignaturas.length;j++){%>
-                <%for (var k=0;k < asignaturas.length;k++){%>
-  
-                <%if(asignaturas[k]._id.toString()==usuarios[i].asignaturas[j].toString()){%>
-                <%= asignaturas[k].title%>
-                <% } %>
-                <% } %>
-                <% } %>
-              </td>
-              <td>
-               
-                <a href="/usuarios/editar_usuarios/<%= usuarios[i]._id %>" class="btn btn-secondary">Edit</a>
-                <a id="eliminar" onclick="pop_up()" href="/usuarios/delete/<%= usuarios[i]._id %>" class="btn btn-danger">Delete</a>
-              </td>
-            </tr>
-            <% } %>
+          <tr>
+            <td><%= i + 1%></td>
+            <td><%= usuarios[i].nombre%></td>
+            <td><%= usuarios[i].apellidos%></td>
+            <td><%= usuarios[i].correo%></td>
+            <td><%= usuarios[i].rol%></td>
+            <td><%= usuarios[i].tipo_curso%></td>
+            <td>
+              <%for (var j=0; j < usuarios[i].asignaturas.length;j++){%>
+              <%for (var k=0;k < asignaturas.length;k++){%>
+
+              <%if(asignaturas[k]._id.toString()==usuarios[i].asignaturas[j].toString()){%>
+              <%= asignaturas[k].title%>
+              <% } %>
+              <% } %>
+              <% } %>
+            </td>
+            <td>
+
+              <a href="/usuarios/editar_usuarios/<%= usuarios[i]._id %>" class="btn btn-secondary">Edit</a>
+              <a id="eliminar" onclick="pop_up()" href="/usuarios/delete/<%= usuarios[i]._id %>"
+                class="btn btn-danger">Delete</a>
+            </td>
+          </tr>
+          <% } %>
         </tbody>
       </table>
 
@@ -138,14 +153,14 @@
     });
   });
 
-//No va el scrip nose sabe porque
+  //No va el scrip nose sabe porque
 
   function pop_up() {
     var elemento = document.getElementById("eliminar");
     if (confirm("¿Estas seguro de que quieres eliminar?")) {
       var hola;
     } else {
-      elemento.setAttribute("href","/usuarios");
+      elemento.setAttribute("href", "/usuarios");
     }
   }
 </script>
