--- a/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/usuarios.ejs
+++ b/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/usuarios.ejs
@@ -13,7 +13,7 @@
     <div class="col-md-10">
       <div class="card">
         <div class="card-body">
-          <form action="/addUserCSV" method="post" enctype="multipart/form-data">
+          <form action="/usuarios/add" method="post" enctype="multipart/form-data">
             <div class="form-group">
               <input class="form-control" type="text" name="nombre" placeholder="Nombre" required>
             </div>
