--- a/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/asignaturas.ejs
+++ b/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/asignaturas.ejs
@@ -8,7 +8,7 @@
 <div class="container">
   <%if(user.rol == "Administrador"){%>
   <div class="row">
-    <div class="col-md-10">
+    <div class="col-xs-6 col-sm-12 col-md-10">
       <div class="card">
         <div class="card-body">
           <form action="/asignaturas/add" method="post">
@@ -55,7 +55,7 @@
     
     <% } %>
     
-      <div class="col-md-10">
+      <div class="col-xs-6 col-sm-12 col-md-10">
         <table class="table table-bordered table-hover">
           <thead>
             <tr>
