--- a/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/partials/_header.ejs
+++ b/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/partials/_header.ejs
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>Universidad de las mejores</title>
     <body>
-        <div id="menu">
+        <div id="menu" class="col-xs-10 col-sm-20 cold-md-50">
           <nav>
             <ul class="primer_tab">  
               <%if(!(user)){%>
