--- a/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/software.ejs
+++ b/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/software.ejs
@@ -10,7 +10,7 @@
 <div class="container">
   <%if(user.rol == "Administrador"){%>
   <div class="row">
-    <div class="col-md-10">
+    <div class="col-xs-6 col-sm-12 col-md-10">
       <div class="card">
         <div class="card-body">
           <form action='/software/<%= asignatura._id %>' method="POST" enctype="multipart/form-data">
@@ -35,7 +35,7 @@
   </div>
   <% } %>
 
-<div class="col-md-15">
+<div class="col-xs-6 col-sm-12 col-md-10">
   <table class="table table-bordered table-hover">
     <thead>
       <tr>
