--- a/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/usuarios.ejs
+++ b/NodeJsMongoDBCrudLogin -Andrea,Alejandra,Natalia/views/usuarios.ejs
@@ -10,7 +10,7 @@
 <%if(user.rol == "Administrador"){%>
 <div class="container">
   <div class="row">
-    <div class="col-md-10">
+    <div class="col-xs-6 col-sm-12 col-md-10">
       <div class="card">
         <div class="card-body">
           <form action="/usuarios/add" method="post" enctype="multipart/form-data">
@@ -167,20 +167,21 @@
       </div>
       <br>
       <br>
+      <div class="form-group">
+        <form method="post" enctype="multipart/form-data" action="/addUserCSV">
+  
+          <p>
+            <input type="file" name="file" accept="text/CSV" />
+            <button type="submit">Añadir mediante CSV</button>
+          </p>
+  
+        </form>
+      </div>
     </div>
 
-    <div class="form-group">
-      <form method="post" enctype="multipart/form-data" action="/addUserCSV">
+    
 
-        <p>
-          <input type="file" name="file" accept="text/CSV" />
-          <button type="submit">Añadir mediante CSV</button>
-        </p>
-
-      </form>
-    </div>
-
-    <div class="col-md-20">
+    <div class="col-xs-20 col-sm-10 col-md-20">
       <table class="table table-bordered table-hover">
         <thead>
           <tr>
